Moved Draw functions to Draw.cpp Include Game.h in Draw.cpp

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="Vec2.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Draw.cpp" />
     <ClCompile Include="Dude.cpp" />
     <ClCompile Include="DXErr.cpp" />
     <ClCompile Include="FrameTimer.cpp" />
